<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/su_turno_adm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/su_turno"
        android:textSize="20sp"
        android:textColor="@color/black" />
    
    <TextView 
        android:id="@+id/numero_turno_adm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_asignar"
        android:textSize="50sp"
        android:textColor="@color/dark_blue" />
    
    <Button 
        android:id="@+id/boton_pedir_adm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomar_turno"
        android:textColor="@color/black"
        android:onClick="onClickPedirAdm" />
    
</LinearLayout>