<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            
            <ImageView
              android:contentDescription="@string/descr_logo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/img_logo"
              android:paddingTop="30dp"
              android:paddingBottom="20dp" />
           
           <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/login"
              android:textSize="25sp"
              android:textColor="@color/dark_blue" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/no_documento"
               android:layout_marginLeft="10dp"
               android:textSize="15sp"
               android:textColor="@color/dark_blue" />
           
           <EditText
               android:id="@+id/documento_login"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:layout_marginRight="10dp"
               android:padding="10dp"
               android:textColor="@color/black"
               android:background="@color/light_gray"
               android:inputType="number"
               android:singleLine="true" />
           
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/contrasena"
               android:layout_marginLeft="10dp"
               android:textSize="15sp"
               android:textColor="@color/dark_blue" />
           
           <EditText
               android:id="@+id/contrasena_login"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:layout_marginRight="10dp"
               android:padding="10dp"
               android:textColor="@color/black"
               android:background="@color/light_gray"
               android:singleLine="true"
               android:inputType="textPassword" />

           
           <Button 
               android:id="@+id/boton_login"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:text="@string/login"
               android:layout_margin="20dp"
               android:onClick="onClickLogin" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>